added data files

--- a/setup.ipynb
+++ b/setup.ipynb
@@ -18,15 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f09cb08f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pandas\n",
-    "%pip install numpy\n",
-    "%pip install whoosh\n",
-    "%pip install nltk"
+    "# %pip install pandas\n",
+    "# %pip install numpy\n",
+    "# %pip install whoosh\n",
+    "# %pip install nltk\n",
+    "# %pip install sklearn"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d147d7a2",
    "metadata": {
     "ExecuteTime": {
@@ -55,69 +56,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "dd8a7ae7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==Towns and localities==\n",
-      "\n",
-      "---Image:df---\n",
-      "[[Image:DaylesfordTownHall.JPG|thumb|The Town Hall in Daylesford, built in 1867 for the Borough of Daylesford.\n",
-      "[tpl]cite news| title =Daylesford|work=Travel|publisher=The Age|url=http://www.theage.com.au/news/Victoria/Daylesford/2005/02/17/1108500206394.html|accessdate=2008-10-12 | location=Melbourne | date=8 February 2004[/tpl]]]\n",
-      "---Image:Glenlyon Shire Hall Victoria.jpg|thumb|The Shire Hall in Glenlyon, built in 1890 for the Shire of Glenlyon.---\n",
-      "\n",
-      "==Population==\n",
-      "\n",
-      "* Estimate in 1958 Victorian Year Book.\n",
-      "\n",
-      "\n",
-      "\n",
-      "==Towns and localities==\n",
-      "\n",
-      "[[Image:df]]\n",
-      "[[Image:DaylesfordTownHall.JPG|thumb|The Town Hall in Daylesford, built in 1867 for the Borough of Daylesford.\n",
-      "[tpl]cite news| title =Daylesford|work=Travel|publisher=The Age|url=http://www.theage.com.au/news/Victoria/Daylesford/2005/02/17/1108500206394.html|accessdate=2008-10-12 | location=Melbourne | date=8 February 2004[/tpl]]]\n",
-      "[[Image:Glenlyon Shire Hall Victoria.jpg|thumb|The Shire Hall in Glenlyon, built in 1890 for the Shire of Glenlyon.]]\n",
-      "\n",
-      "==Population==\n",
-      "\n",
-      "* Estimate in 1958 Victorian Year Book.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = \"\"\"\n",
-    "==Towns and localities==\n",
-    "\n",
-    "[[Image:df]]\n",
-    "[[Image:DaylesfordTownHall.JPG|thumb|The Town Hall in Daylesford, built in 1867 for the Borough of Daylesford.\n",
-    "[tpl]cite news| title =Daylesford|work=Travel|publisher=The Age|url=http://www.theage.com.au/news/Victoria/Daylesford/2005/02/17/1108500206394.html|accessdate=2008-10-12 | location=Melbourne | date=8 February 2004[/tpl]]]\n",
-    "[[Image:Glenlyon Shire Hall Victoria.jpg|thumb|The Shire Hall in Glenlyon, built in 1890 for the Shire of Glenlyon.]]\n",
-    "\n",
-    "==Population==\n",
-    "\n",
-    "* Estimate in 1958 Victorian Year Book.\n",
-    "\"\"\"\n",
-    "\n",
-    "def replace(match):\n",
-    "    print(match.group(1))\n",
-    "    return f\"[[[Image:{match.group(1)}]]]\"\n",
-    "#s = re.sub(\"\\[\\[Image:(.*)\\]\\]\", replace, s)\n",
-    "s = re.sub(r\"\\[\\[Image:(.*)\\]\\]\", r\"---Image:\\1---\", s)\n",
-    "print(s)\n",
-    "s = re.sub(\"---Image:(.*)---\", r\"[[Image:\\1]]\", s)\n",
-    "print()\n",
-    "print(s)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1c16a835",
    "metadata": {},
@@ -127,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "075891c9",
    "metadata": {
     "ExecuteTime": {
@@ -156,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4c223279",
    "metadata": {
     "ExecuteTime": {
@@ -242,7 +180,7 @@
        "4  CATEGORIES: Harwich, Port cities and towns in ...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "bd8f23ec",
    "metadata": {},
    "outputs": [
@@ -375,7 +313,7 @@
        "4  List of largest European cities in history              -1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
