--- a/setup.ipynb
+++ b/setup.ipynb
@@ -23,11 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install pandas\n",
-    "# %pip install numpy\n",
-    "# %pip install whoosh\n",
-    "# %pip install nltk\n",
-    "# %pip install sklearn"
+    "%pip install pandas\n",
+    "%pip install numpy\n",
+    "%pip install whoosh\n",
+    "%pip install nltk\n",
+    "%pip install sklearn"
    ]
   },
   {
