--- a/setup.ipynb
+++ b/setup.ipynb
@@ -18,16 +18,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f09cb08f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/oberon/.local/lib/python3.11/site-packages (2.1.0)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (1.25.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/oberon/.local/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in /home/oberon/.local/lib/python3.11/site-packages (1.25.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: whoosh in /home/oberon/.local/lib/python3.11/site-packages (2.7.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: nltk in /home/oberon/.local/lib/python3.11/site-packages (3.8.1)\n",
+      "Requirement already satisfied: tqdm in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (4.66.1)\n",
+      "Requirement already satisfied: click in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (2023.12.25)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting sklearn\n",
+      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
+      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
+      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
+      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
+      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
+      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
+      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
+      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
+      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
+      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m More information is available at\n",
+      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install pandas\n",
     "%pip install numpy\n",
     "%pip install whoosh\n",
     "%pip install nltk\n",
     "%pip install sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25de0bb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to /home/oberon/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')"
    ]
   },
   {
@@ -195,7 +288,6 @@
     "    \n",
     "    fid = fname.split(\"-\")[-1].replace(\".txt\", \"\")\n",
     "    for title, text in parse_wiki_file(content):\n",
-    "        \n",
     "        if text.startswith(\"#REDIRECT\"):\n",
     "            redirect = re.sub(\"\\[tpl\\].*\\[/tpl\\]\", \"\", text.replace(\"#REDIRECT\", \"\")).strip()\n",
     "            redirects[\"file_id\"].append(fid)\n",
@@ -363,12 +455,12 @@
    "id": "1b121799",
    "metadata": {},
    "source": [
-    "### Parse the [questions.txt](./data/questions.txt) file into a dataframe, create a train/test split, and save it"
+    "### Parse the [questions.txt](./data/questions.txt) file into a dataframe and save it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "2d91846c",
    "metadata": {},
    "outputs": [
@@ -449,7 +541,7 @@
        "4  The Salvation Army|Salvation Army  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,37 +554,19 @@
     "    question = question.split(\"\\n\")\n",
     "    data[\"category\"].append(question[0])\n",
     "    data[\"question\"].append(question[1])\n",
-    "    data[\"answer\"].append(question[2])\n",
+    "    data[\"answer\"].append(question[2].title())\n",
     "questions_df = pd.DataFrame(data)\n",
     "questions_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2f9ccda6",
+   "execution_count": 9,
+   "id": "62aabc6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 80, 20)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nq = len(questions_df.index)\n",
-    "ntrain = int(nq * 0.8) # train with 80% of the data\n",
-    "ntest = nq - ntrain # test with the rest\n",
-    "\n",
-    "questions_df.to_pickle(\"./data/questions.pkl\")\n",
-    "questions_df.head(ntrain).to_pickle(\"./data/questions_train.pkl\")\n",
-    "questions_df.tail(ntest).to_pickle(\"./data/questions_test.pkl\")\n",
-    "nq, ntrain, ntest"
+    "questions_df.to_pickle(\"./data/questions.pkl\")"
    ]
   }
  ],
