started on attempt 2

--- a/watson_attempt2.ipynb
+++ b/watson_attempt2.ipynb
@@ -5,7 +5,7 @@
    "id": "9cc1f222",
    "metadata": {},
    "source": [
-    "# Watson Attempt 1"
+    "# Watson Attempt 2"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "15a2236b",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import json\n",
     "\n",
     "from whoosh.fields import Schema, TEXT, ID\n",
     "from whoosh.index import create_in, open_dir, exists_in\n",
@@ -42,6 +43,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "04b23a31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "if not api_key:\n",
+    "    api_key = input(\"Enter your OpenAI API Key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "47cfaf01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_ChatGPT(query):\n",
+    "    import requests\n",
+    "\n",
+    "    model = \"gpt-3.5-turbo-0301\" # TODO\n",
+    "\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Authorization\": \"Bearer \" + api_key,\n",
+    "    }\n",
+    "\n",
+    "    json_data = {\n",
+    "            \"model\": model,\n",
+    "            \"temperature\": 0,\n",
+    "            \"messages\": [\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": query\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "\n",
+    "    response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=json_data).json()\n",
+    "    assert \"choices\" in response, response\n",
+    "    assert len(response[\"choices\"]) > 0, response\n",
+    "    assert \"message\" in response[\"choices\"][0], response\n",
+    "    assert \"content\" in response[\"choices\"][0][\"message\"], response\n",
+    "    \n",
+    "    return response[\"choices\"][0][\"message\"][\"content\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "524da147",
    "metadata": {},
@@ -51,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "4ae6f951",
    "metadata": {},
    "outputs": [],
@@ -71,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fb981bf1",
    "metadata": {},
    "outputs": [],
@@ -97,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "81616c8e",
    "metadata": {},
    "outputs": [],
@@ -122,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "0e2c5612",
    "metadata": {},
    "outputs": [],
@@ -133,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "f232c4c6",
    "metadata": {},
    "outputs": [],
@@ -155,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "47c86225",
    "metadata": {},
    "outputs": [],
@@ -173,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "id": "13c3880d",
    "metadata": {},
    "outputs": [],
@@ -181,11 +231,85 @@
     "query_subset_p = 0.75 # the percentage of the query to keep\n",
     "\n",
     "def filter_query(query):\n",
-    "    query = query.split()\n",
-    "    query_counts = sorted([(get_term_count(normalize_term(t)), i) for i, t in enumerate(query)])\n",
-    "    n = math.ceil(len(query) * query_subset_p)\n",
+    "    querys = query.split()\n",
+    "    if len(querys) <= 3:\n",
+    "        return query\n",
+    "\n",
+    "    query_counts = sorted([(get_term_count(normalize_term(t)), i) for i, t in enumerate(querys)])\n",
+    "    n = math.ceil(len(querys) * query_subset_p)\n",
     "    query_indices = sorted([i for _, i in query_counts[:n]])\n",
-    "    return \" \".join([query[i] for i in query_indices])"
+    "    return \" \".join([querys[i] for i in query_indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "61bb18bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"ChatGPT_template1.txt\", \"r\") as file:\n",
+    "    template1 = file.read()\n",
+    "def pass_query_through_ChatGPT(query):\n",
+    "    gptq = template1 + query\n",
+    "    try:\n",
+    "        result = query_ChatGPT(gptq)\n",
+    "        data = json.loads(result)\n",
+    "    except:\n",
+    "        print(\"JSON ERROR\", result)\n",
+    "        return query\n",
+    "    return data[\"question\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bf905c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"ChatGPT_template2.txt\", \"r\") as file:\n",
+    "    template2 = file.read()\n",
+    "def boost_important_terms(query):\n",
+    "    if len(query.split()) <= 3:\n",
+    "        return query\n",
+    "    \n",
+    "    gptq = template2 + query\n",
+    "\n",
+    "    try:\n",
+    "        terms = json.loads(query_ChatGPT(gptq))\n",
+    "    except:\n",
+    "        return query\n",
+    "    \n",
+    "    if len(terms) < 3:\n",
+    "        return query\n",
+    "    \n",
+    "    try:\n",
+    "        term1 = terms[\"term1\"]\n",
+    "        term2 = terms[\"term2\"]\n",
+    "        term3 = terms[\"term3\"]\n",
+    "    except:\n",
+    "        return query\n",
+    "    \n",
+    "    # boost the importance of the 3 least frequent terms TODO tune the boost level\n",
+    "    query = query.replace(term1, term1 + \"^2\")\n",
+    "    query = query.replace(term2, term2 + \"^2\")\n",
+    "    query = query.replace(term3, term3 + \"^2\")\n",
+    "    return query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "327c32e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_pipeline(query):\n",
+    "    query = pass_query_through_ChatGPT(query)\n",
+    "    query = filter_query(query)\n",
+    "    #query = boost_important_terms(query)\n",
+    "    return query"
    ]
   },
   {
@@ -198,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "b85b91b7",
    "metadata": {},
    "outputs": [],
@@ -251,7 +375,11 @@
     "        return QueryParser(\"content\", schema=self._index.schema, group=og)\n",
     "    \n",
     "    def search(self, category, question, scorer=BM25F):\n",
-    "        query = self._parser.parse(f\"{category}^0.5 \" + filter_query(question))\n",
+    "        try:\n",
+    "            query = self._parser.parse(f\"{category}^0.5 \" + query_pipeline(question))\n",
+    "        except TypeError as e:\n",
+    "            print(query_pipeline(question))\n",
+    "            raise e\n",
     "        with self._index.searcher(weighting=scorer()) as searcher:\n",
     "            results = searcher.search(query, limit=None)\n",
     "            if results.scored_length() == 0:\n",
@@ -311,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
@@ -329,17 +457,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "8cce1bd4",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON ERROR is located in this city (Cincinnati, Ohio).\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"The Taft Museum of Art is located in this city (Cincinnati, Ohio).\"\n",
+      "}\n",
+      "JSON ERROR (\"Santa Fe, New Mexico\") is dedicated to the works of this American artist known for her paintings of enlarged flowers and New Mexico landscapes.\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"The Georgia O'Keeffe Museum (located in Santa Fe, New Mexico) is dedicated to the works of this American artist known for her paintings of enlarged flowers and New Mexico landscapes.\"\n",
+      "}\n",
+      "JSON ERROR is a brand name for this gelatin dessert (a dessert made with a sweetened and flavored processed collagen product). \n",
+      "\n",
+      "{\n",
+      "    \"question\": \"Jell-O is a brand name for this gelatin dessert (a dessert made with a sweetened and flavored processed collagen product).\"\n",
+      "}\n",
+      "JSON ERROR , dominates the skyline. (Helsinki) \n",
+      "\n",
+      "{\n",
+      "    \"question\": \"What Finnish city is dominated by the Lutheran Cathedral, also known as Tuomiokirkko? (The city is Helsinki)\"\n",
+      "}\n",
+      "JSON ERROR (protagonist of the book series \"The Southern Vampire Mysteries\") was played by this actress in the TV adaptation (who is Anna Paquin). \n",
+      "\n",
+      "{\n",
+      "    \"question\": \"In 2009, who played Sookie Stackhouse (protagonist of the book series 'The Southern Vampire Mysteries') in the TV adaptation? (Who is Anna Paquin)\"\n",
+      "}\n",
+      "JSON ERROR is located in this Michigan city.\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"The Kalamazoo Institute of Arts is located in this Michigan city (Kalamazoo).\"\n",
+      "}\n",
+      "JSON ERROR is located in this state (Idaho).\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"The Sun Valley Center for the Arts is located in this state (Idaho).\"\n",
+      "}\n",
+      "JSON ERROR was this singer's (Michael Jackson's) second number one hit single in the United States.\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"In 1980, what singer (Michael Jackson) had their second number one hit single in the United States with the song 'Rock With You'? \"\n",
+      "}\n",
+      "JSON ERROR , this person was not a woman.\n",
+      "\n",
+      "{\n",
+      "    \"question\": \"In 2010: As Sherlock Holmes on film, this person is a man.\"\n",
+      "}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.3499836821153439"
+       "0.30372436112296486"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,169 +562,6 @@
     "pa1_score = watson.test(eval=\"p@1\")\n",
     "pa1_score"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d9409e7",
-   "metadata": {},
-   "source": [
-    "### Perform Error Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "66084e04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correct = []\n",
-    "incorrect = []\n",
-    "for _, row in questions_df.iterrows():\n",
-    "    results = watson.search(row.category, row.question)\n",
-    "    guess = Watson.get_guess(results)\n",
-    "    if Watson.is_correct(results, row.answer):\n",
-    "        correct.append((row, guess))\n",
-    "    else:\n",
-    "        incorrect.append((row, guess))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "cf60fdae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(25, 100)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(correct), len(correct) + len(incorrect)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "1fd81577",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_wiki_page(title):\n",
-    "    page = wiki_df[wiki_df.title == title]\n",
-    "    text = page.text.to_numpy()\n",
-    "    if len(text) == 0:\n",
-    "        return None\n",
-    "    return text[0]\n",
-    "\n",
-    "def log_result(r, file=sys.stdout):\n",
-    "    q, g = r\n",
-    "    file.write(\"   CATEGORY: \" + q.category + \"\\n\")\n",
-    "    file.write(\"   QUESTION: \" + q.question + \"\\n\")\n",
-    "    file.write(\"     ANSWER: \" + q.answer + \"\\n\") \n",
-    "    file.write(\"      GUESS: \" + g + \"\\n\")\n",
-    "    file.write(\"ANSWER TEXT:\\n\\n\")\n",
-    "    answer_text = None\n",
-    "    for answer in q.answer.split(\"|\"):\n",
-    "        answer_text = get_wiki_page(answer)\n",
-    "        if answer_text is not None:\n",
-    "            break\n",
-    "    if answer_text is None:\n",
-    "        print(f\"NO RESULTS FOR {q.answer}\")\n",
-    "        answer_text = \"\"\n",
-    "    file.write(answer_text)\n",
-    "    if g.lower() not in q.answer.lower():\n",
-    "        file.write(\"\\n\\n\")\n",
-    "        file.write(\" GUESS TEXT:\\n\\n\")                     \n",
-    "    file.write(get_wiki_page(g))\n",
-    "    file.write(\"\\n\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "9ba04803",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncorrect = 5\n",
-    "nincorrect = 15\n",
-    "if not os.path.exists(\"logs\"):\n",
-    "    os.mkdir(\"logs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "60d174d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not os.path.exists(\"logs/correct\"):\n",
-    "    os.mkdir(\"logs/correct\")\n",
-    "\n",
-    "for i in range(0, len(correct), len(correct) // ncorrect):\n",
-    "    with open(f\"logs/correct/{i}.txt\", \"w\") as file:\n",
-    "        log_result(correct[i], file=file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "3d1143e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "5\n",
-      "10\n",
-      "15\n",
-      "20\n",
-      "25\n",
-      "30\n",
-      "35\n",
-      "40\n",
-      "45\n",
-      "50\n",
-      "55\n",
-      "60\n",
-      "65\n",
-      "70\n",
-      "NO RESULTS FOR Jfk|John F. Kennedy\n"
-     ]
-    }
-   ],
-   "source": [
-    "if not os.path.exists(\"logs/incorrect\"):\n",
-    "    os.mkdir(\"logs/incorrect\")\n",
-    "    \n",
-    "for i in range(0, len(incorrect), len(incorrect) // nincorrect):\n",
-    "    print(i)\n",
-    "    with open(f\"logs/incorrect/{i}.txt\", \"w\") as file:\n",
-    "        log_result(incorrect[i], file=file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95661e01",
-   "metadata": {},
-   "source": [
-    "## Ideas for increasing score (for attempt 2)\n",
-    "- Find a way to fit redirects into the index\n",
-    "- Boost terms in the query with low tf-idf values\n",
-    "- Ask ChatGPT which terms are more important in a query and boost those\n",
-    "- Ask ChatGPT to rephrase the query to try to solve some of the error classes"
-   ]
   }
  ],
  "metadata": {
@@ -564,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
