removed data files from repo

--- a/watson_attempt1.ipynb
+++ b/watson_attempt1.ipynb
@@ -18,174 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "15a2236b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "import math\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from whoosh.fields import Schema, TEXT, ID\n",
     "from whoosh.index import create_in, open_dir, exists_in\n",
     "from whoosh.qparser import QueryParser, OrGroup\n",
     "from whoosh.scoring import BM25F\n",
-    "from whoosh.analysis import RegexTokenizer, LowercaseFilter, Filter\n",
-    "from whoosh.analysis import Filter                                \n",
-    "\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "524da147",
-   "metadata": {},
-   "source": [
-    "### Load the data"
+    "from whoosh.analysis import RegexTokenizer, LowercaseFilter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ae6f951",
+   "id": "2c00be79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wiki_df = pd.read_pickle(\"./data/wiki.pkl\")\n",
-    "wiki_redirects_df = pd.read_pickle(\"./data/wiki_redirects.pkl\")\n",
-    "questions_df = pd.read_pickle(\"./data/questions.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ee5ef14",
-   "metadata": {},
-   "source": [
-    "### Build the lemmatize filter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fb981bf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lemmatizer = WordNetLemmatizer()\n",
-    "\n",
-    "class LemmatizeFilter(Filter):\n",
-    "    def __call__(self, tokens):\n",
-    "        for token in tokens:\n",
-    "            token.text = lemmatizer.lemmatize(token.text)\n",
-    "            yield token"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3579a3f5",
-   "metadata": {},
-   "source": [
-    "### Organize the redirect table\n",
-    "\n",
-    "Organize the redirect table into a more efficient lookup table, where the keys are the index of the page redirected to in wiki_df, and the values are the titles of the redirect pages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "81616c8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "redirect_lookups = {}\n",
-    "for _, row in wiki_redirects_df.iterrows():\n",
-    "    if row.redirect_index in redirect_lookups:\n",
-    "        redirect_lookups[row.redirect_index].append(row.title)\n",
-    "    else:\n",
-    "        redirect_lookups[row.redirect_index] = [row.title]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae264d32",
-   "metadata": {},
-   "source": [
-    "### Build the query filter\n",
-    "\n",
-    "Build the query filter by getting a count of each term in the collection, and dropping terms with high frequency from the query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0e2c5612",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_term(term):\n",
-    "    return lemmatizer.lemmatize(term.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f232c4c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_vectorizer = CountVectorizer()\n",
-    "count_matrix = count_vectorizer.fit_transform(wiki_df.text)\n",
-    "terms = count_vectorizer.get_feature_names_out()\n",
-    "total_counts = np.asarray(np.sum(count_matrix, axis=0)).reshape(-1)\n",
-    "term_counts = {}\n",
-    "for term, count in zip(terms, total_counts):\n",
-    "    term = lemmatizer.lemmatize(term)\n",
-    "    if term in term_counts:\n",
-    "        term_counts[term] += count\n",
-    "    else:\n",
-    "        term_counts[term] = count\n",
-    "\n",
-    "del count_matrix, total_counts, terms, count_vectorizer # clean up memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "47c86225",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_term_count(term):\n",
-    "    if len(term) <= 1:\n",
-    "        return float(\"inf\")\n",
-    "    if term.isnumeric():\n",
-    "        return 0\n",
-    "    if term in term_counts:\n",
-    "        return term_counts[term]\n",
-    "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "13c3880d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_subset_p = 0.75 # the percentage of the query to keep\n",
-    "\n",
-    "def filter_query(query):\n",
-    "    query = query.split()\n",
-    "    query_counts = sorted([(get_term_count(normalize_term(t)), i) for i, t in enumerate(query)])\n",
-    "    n = math.ceil(len(query) * query_subset_p)\n",
-    "    query_indices = sorted([i for _, i in query_counts[:n]])\n",
-    "    return \" \".join([query[i] for i in query_indices])"
+    "from shared import wiki_df, questions_df, LemmatizeFilter, filter_query"
    ]
   },
   {
@@ -198,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b85b91b7",
    "metadata": {},
    "outputs": [],
@@ -208,42 +63,24 @@
     "        self.Q = len(questions_df.index)\n",
     "        self._analyzer = self._build_analyzer()\n",
     "        self._index = self._build_index()\n",
-    "        self._title_index = self._build_title_index()\n",
     "        self._parser = self._build_parser()\n",
     "\n",
     "    def _build_analyzer(self):\n",
     "        return RegexTokenizer() | LowercaseFilter() | LemmatizeFilter()\n",
     "    \n",
     "    def _build_index(self):\n",
-    "        if exists_in(\".index\"):\n",
-    "            ix = open_dir(\".index\")\n",
+    "        if exists_in(\"data/index\"):\n",
+    "            ix = open_dir(\"data/index\")\n",
     "        else:\n",
-    "            os.mkdir(\".index\")\n",
+    "            os.mkdir(\"data/index\")\n",
     "            schema = Schema(title=ID(stored=True),  \n",
     "                    titles=TEXT(analyzer=self._analyzer), \n",
     "                    categories=TEXT(analyzer=self._analyzer), \n",
     "                    content=TEXT(analyzer=self._analyzer))\n",
-    "            ix = create_in(\".index\", schema)\n",
+    "            ix = create_in(\"data/index\", schema)\n",
     "            with ix.writer() as writer:\n",
     "                for _, row in wiki_df.iterrows():\n",
     "                    writer.add_document(title=row.title, content=row.text)\n",
-    "                writer.commit()\n",
-    "        return ix\n",
-    "    \n",
-    "    def _build_title_index(self):\n",
-    "        if exists_in(\".title_index\"):\n",
-    "            ix = open_dir(\".title_index\")\n",
-    "        else:\n",
-    "            os.mkdir(\".title_index\")\n",
-    "            schema = Schema(title=ID(stored=True),  content=TEXT(analyzer=self._analyzer))\n",
-    "            ix = create_in(\".title_index\", schema)\n",
-    "            with ix.writer() as writer:\n",
-    "                for i, row in wiki_df.iterrows():\n",
-    "                    titles = [row.title]\n",
-    "                    if i in redirect_lookups:\n",
-    "                        titles += redirect_lookups[i]\n",
-    "                    writer.add_document(title=row.title, content=\" \".join(titles))\n",
-    "                writer.commit()\n",
     "        return ix\n",
     "    \n",
     "    def _build_parser(self):\n",
@@ -311,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "95661e01",
    "metadata": {},
    "outputs": [],
@@ -329,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "8cce1bd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3499836821153439"
+       "0.36053742784688664"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "6d46c454",
    "metadata": {},
    "outputs": [
@@ -564,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
