--- a/setup.ipynb
+++ b/setup.ipynb
@@ -28,10 +28,10 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/oberon/.local/lib/python3.11/site-packages (2.1.0)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: numpy>=1.23.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (1.25.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/oberon/.local/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
       "Requirement already satisfied: six>=1.5 in /home/oberon/.local/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -43,9 +43,9 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: nltk in /home/oberon/.local/lib/python3.11/site-packages (3.8.1)\n",
       "Requirement already satisfied: tqdm in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (4.66.1)\n",
-      "Requirement already satisfied: click in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
       "Requirement already satisfied: regex>=2021.8.3 in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (2023.12.25)\n",
+      "Requirement already satisfied: joblib in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (1.3.2)\n",
+      "Requirement already satisfied: click in /home/oberon/.local/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Collecting sklearn\n",
@@ -145,7 +145,12 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
@@ -428,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "35414787",
    "metadata": {},
    "outputs": [
@@ -438,7 +443,7 @@
        "(151589, 126231)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,6 +572,40 @@
    "outputs": [],
    "source": [
     "questions_df.to_pickle(\"./data/questions.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcf6b28a",
+   "metadata": {},
+   "source": [
+    "### Count the frequency of each term in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ae73efff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmatizer = WordNetLemmatizer()\n",
+    "count_vectorizer = CountVectorizer()\n",
+    "count_matrix = count_vectorizer.fit_transform(wiki_df.text)\n",
+    "terms = count_vectorizer.get_feature_names_out()\n",
+    "total_counts = np.asarray(np.sum(count_matrix, axis=0)).reshape(-1)\n",
+    "term_counts = {}\n",
+    "for term, count in zip(terms, total_counts):\n",
+    "    term = lemmatizer.lemmatize(term.lower())\n",
+    "    if term in term_counts:\n",
+    "        term_counts[term] += count\n",
+    "    else:\n",
+    "        term_counts[term] = count\n",
+    "\n",
+    "del count_matrix, total_counts, terms, count_vectorizer # clean up memory\n",
+    "\n",
+    "with open(\"data/term_counts.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(term_counts, file)"
    ]
   }
  ],
